url {
  src: "https://github.com/ptal/AbSolute/zipball/v0.3.0"
}
opam-version: "2.0"
maintainer: "Pierre Talbot <pierre.talbot@univ-nantes.fr>"
authors: [
  "Marie Pelleau <marie.pelleau@i3s.unice.fr>"
  "Ghiles Ziat <ghiles.ziat@lip6.fr>"
  "Pierre Talbot <pierre.talbot@univ-nantes.fr>"
]
homepage: "https://github.com/ptal/AbSolute"
bug-reports: "https://github.com/ptal/AbSolute/issues"
dev-repo: "git+https://github.com/ptal/AbSolute"
license: "LGPL"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
run-test: [
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "dune" {build}
  "ocaml" {>= "4.07.1"}
  "extlib"
  "containers"
  "mlgmpidl"
  "mtime"
  "alcotest" {with-test}
]

synopsis: "AbSolute solver"
description: "AbSolute is a constraint solver based on abstract domains from the theory of abstract interpretation."
