url {
  src: "https://github.com/ptal/AbSolute/zipball/v0.10.4"
}
opam-version: "2.0"
maintainer: "Pierre Talbot <pierre.talbot@uni.lu>"
authors: [
  "Marie Pelleau <marie.pelleau@i3s.unice.fr>"
  "Ghiles Ziat <ghiles.ziat@lip6.fr>"
  "Pierre Talbot <pierre.talbot@uni.lu>"
]
homepage: "https://github.com/ptal/AbSolute"
bug-reports: "https://github.com/ptal/AbSolute/issues"
dev-repo: "git+https://github.com/ptal/AbSolute"
license: "LGPL"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
run-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]
depends: [
  "dune" {build}
  "ocaml" {>= "4.09.0"}
  "extlib"
  "containers-data" {>= "3.0.1"}
  "minisatml" {>= "0.3.0"}
  "mlgmpidl"
  "mtime"
  "alcotest"
]

synopsis: "AbSolute solver"
description: "AbSolute is a constraint solver based on abstract domains from the theory of abstract interpretation."
name: "absolute"
version: "0.10.3"
