(executable
 (name run_tests)
 (libraries alcotest absolute absolute.box absolute.octagon
    absolute.direct_product absolute.event_loop absolute.logic_completion absolute.propagator_completion
    absolute.lang absolute.bounds)
)

(alias
 (name runtest)
 (deps run_tests.exe)
(action (run %{deps} -q --color=always)))