(library
  (name direct_product)
  (public_name absolute.direct_product)
  (libraries absolute.core absolute.bounds absolute.vardom absolute.lang absolute.lang.typing
     absolute.fixpoint absolute.domains)
  (flags :standard)
  (ocamlopt_flags (:standard -O3))
  ;(ocamlopt_flags (:standard -p))
  (modules :standard)
)
