(library
  (name logic_product)
  (public_name absolute.logic_product)
  (libraries absolute.core absolute.bounds absolute.vardom absolute.lang absolute.lang.typing
     absolute.domains absolute.ordered_product absolute.event_loop)
  (flags :standard)
  (ocamlopt_flags (:standard -O3))
  ;(ocamlopt_flags (:standard -p))
  (modules :standard)
)
